--- a/OLX-Slayer/src/app/advertisements/advertisements/advertisements.component.css
+++ b/OLX-Slayer/src/app/advertisements/advertisements/advertisements.component.css
@@ -27,11 +27,8 @@ p {
     margin-right: 20%;
     clear: both;
 }
-/* 
-.listing-city {
-    margin-top: 10%;
-} */
 
 .row {
     border: 1px solid black;
+    border-radius: 10%;
 }
