--- a/OLX-Slayer/src/app/chat/chatlist/chatlist.component.html
+++ b/OLX-Slayer/src/app/chat/chatlist/chatlist.component.html
@@ -15,7 +15,7 @@
               <b>{{participant}}</b>
             </span>
           </ng-container>        
-          <p>{{chat.lastMessage.author}} - {{chat.lastMessage.text}}</p> 
+          <!-- <p>{{chat.lastMessage.author}} - {{chat.lastMessage.text}}</p>  -->
         </div>
         <div class="card-action">
           <ng-container *ngFor="let participant of chat.participants">
