deleted unnecessary files, added custom pipe and a non-working custom directive

--- a/OLX-Slayer/src/app/advertisements/advertisement.details/advertisement.details.component.html
+++ b/OLX-Slayer/src/app/advertisements/advertisement.details/advertisement.details.component.html
@@ -23,7 +23,7 @@
           <div class="col">
               <label class="col-lg-3 control-label">Heading:</label>
               <div class="col-lg-8">
-                  <p> {{ ad.heading }} </p>
+                  <p appHighlightItem> {{ ad.heading }} </p>
               </div>
           </div>
           <div class="col">
