--- a/OLX-Slayer/src/app/advertisements/advertisements/advertisements.component.css
+++ b/OLX-Slayer/src/app/advertisements/advertisements/advertisements.component.css
@@ -1,32 +1,54 @@
 .listing-image {
-    width: 100px;
-    height: 100px;
+    height: 100%;
+    width: 100%;
+    /* transform: scale(1.1); */
 }
 
-h4{
-     display: inline-flex; 
+#image {
+    width: 20%;
+    height: 100%;
+    float: left;
+    margin-block-start: 5%;
+    display: inline;
 }
 
-.listing-heading {
-    display: inline-flex;
+
+/* .listing-heading {
+    display: block;
     clear: both;
-}
+} */
 
 p {
     display: inline;
 }
 
- .listing-heading:hover {
-    background-color:lightblue;
+ .listing-heading {
+    /* background-color:lightblue; */
     text-decoration: none;
+    position: relative;
+    display:block;
+    width:80%;
+    height: 10px;
 } 
 
-.listing-category {
-    display: inline;
-    margin-right: 20%;
-    clear: both;
+.row {
+    border: 5px solid #AFA4A4 ;
+    border-radius: 30px;
+    position: relative;
+    transition: all .2s ease-in-out;
 }
 
-.row {
-    border: 1px solid black;
+.row:hover {
+    border: 5px solid #EEBFBF;
+    border-radius: 30px;
+    cursor: pointer;
+    transform: scale(1.05);
+}
+
+.additional-info {
+    display: inline-block;
+    float: right;
+    position: 1;
+    width:80%;
+    margin-left: 100px;
 }
